tests/machine/x/c/sort_stable.error
exit status 1
/workspace/mochi/tests/machine/x/c/sort_stable.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/sort_stable.c:50:14: warning: implicit declaration of function ‘int_create’ [-Wimplicit-function-declaration]
   50 |   int tmp1 = int_create(items_len);
      |              ^~~~~~~~~~
/workspace/mochi/tests/machine/x/c/sort_stable.c:55:9: error: request for member ‘data’ in something not a structure or union
   55 |     tmp1.data[tmp2] = i.v;
      |         ^
/workspace/mochi/tests/machine/x/c/sort_stable.c:59:7: error: request for member ‘len’ in something not a structure or union
   59 |   tmp1.len = tmp2;
      |       ^
/workspace/mochi/tests/machine/x/c/sort_stable.c:66:32: error: request for member ‘data’ in something not a structure or union
   66 |         const char *tmp6 = tmp1.data[i7];
      |                                ^
/workspace/mochi/tests/machine/x/c/sort_stable.c:67:13: error: request for member ‘data’ in something not a structure or union
   67 |         tmp1.data[i7] = tmp1.data[i8];
      |             ^
/workspace/mochi/tests/machine/x/c/sort_stable.c:67:29: error: request for member ‘data’ in something not a structure or union
   67 |         tmp1.data[i7] = tmp1.data[i8];
      |                             ^
/workspace/mochi/tests/machine/x/c/sort_stable.c:68:13: error: request for member ‘data’ in something not a structure or union
   68 |         tmp1.data[i8] = tmp6;
      |             ^
/workspace/mochi/tests/machine/x/c/sort_stable.c:73:22: error: incompatible type for argument 1 of ‘_print_list_string’
   73 |   _print_list_string(result);
      |                      ^~~~~~
      |                      |
      |                      int
/workspace/mochi/tests/machine/x/c/sort_stable.c:20:44: note: expected ‘list_string’ but argument is of type ‘int’
   20 | static void _print_list_string(list_string v) {
      |                                ~~~~~~~~~~~~^
/workspace/mochi/tests/machine/x/c/sort_stable.c:75:14: error: request for member ‘data’ in something not a structure or union
   75 |   free(result.data);
      |              ^
