tests/machine/x/c/sort_stable.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _print_list_string(list_string v) {
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(" ");
    printf("%s", v.data[i]);
  }
}
typedef struct {
  int n;
  const char *v;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int _mochi_main() {
  item_t items[] = {(item_t){.n = 1, .v = "a"}, (item_t){.n = 1, .v = "b"},
                    (item_t){.n = 2, .v = "c"}};
  int items_len = sizeof(items) / sizeof(items[0]);
  int tmp1 = int_create(items_len);
  int *tmp4 = (int *)malloc(sizeof(int) * items_len);
  int tmp2 = 0;
  for (int tmp3 = 0; tmp3 < items_len; tmp3++) {
    item_t i = items[tmp3];
    tmp1.data[tmp2] = i.v;
    tmp4[tmp2] = i.n;
    tmp2++;
  }
  tmp1.len = tmp2;
  for (int i7 = 0; i7 < tmp2 - 1; i7++) {
    for (int i8 = i7 + 1; i8 < tmp2; i8++) {
      if (tmp4[i7] > tmp4[i8]) {
        int tmp5 = tmp4[i7];
        tmp4[i7] = tmp4[i8];
        tmp4[i8] = tmp5;
        const char *tmp6 = tmp1.data[i7];
        tmp1.data[i7] = tmp1.data[i8];
        tmp1.data[i8] = tmp6;
      }
    }
  }
  int result = tmp1;
  _print_list_string(result);
  printf("\n");
  free(result.data);
  return 0;
}
int main() { return _mochi_main(); }
